syntax = "proto3";

package proto;

option go_package = "github.com/dmmitrenko/card-validator/internal/grpc/proto";

service CardValidator{
    rpc ValidateCard(CardValidationRequest) returns (CardValidationResponse) {}
}

message CardValidationRequest {
    string card_number = 1;
    int32 expiration_month = 2;
    int32 expiration_year = 3;
}

message CardValidationResponse {
    bool valid = 1;
    ErrorResponse error = 2;
}

message ErrorResponse{
    int32 code = 1;
    string message = 2;
}